--- a/notebooks/rnnplus_for_har/RNNplus_v23.ipynb
+++ b/notebooks/rnnplus_for_har/RNNplus_v23.ipynb
@@ -487,6 +487,42 @@
       "val0.csv val_performance = 0.007747558876872063\n",
       "val0.csv val accuracy = 0.97131\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(13769, 40, 3)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning Rate:  0.002798\n",
+      "Epoch 1/23\n",
+      "3443/3443 [==============================] - 50s 14ms/step - loss: 0.0479 - val_loss: 0.0282\n",
+      "Learning Rate:  tf.Tensor(0.002675134, shape=(), dtype=float32)\n",
+      "Epoch 2/23\n",
+      "3443/3443 [==============================] - 52s 15ms/step - loss: 0.0281 - val_loss: 0.0244\n",
+      "Learning Rate:  tf.Tensor(0.0025522679, shape=(), dtype=float32)\n",
+      "Epoch 3/23\n",
+      "3443/3443 [==============================] - 49s 14ms/step - loss: 0.0224 - val_loss: 0.0206\n",
+      "Learning Rate:  tf.Tensor(0.002429402, shape=(), dtype=float32)\n",
+      "Epoch 4/23\n",
+      "3443/3443 [==============================] - 49s 14ms/step - loss: 0.0198 - val_loss: 0.0196\n",
+      "Learning Rate:  tf.Tensor(0.0023065358, shape=(), dtype=float32)\n",
+      "Epoch 5/23\n",
+      "3443/3443 [==============================] - 48s 14ms/step - loss: 0.0177 - val_loss: 0.0156\n",
+      "Learning Rate:  tf.Tensor(0.00218367, shape=(), dtype=float32)\n",
+      "Epoch 6/23\n",
+      "3443/3443 [==============================] - 49s 14ms/step - loss: 0.0156 - val_loss: 0.0147\n",
+      "Learning Rate:  tf.Tensor(0.002060804, shape=(), dtype=float32)\n",
+      "Epoch 7/23\n",
+      "1731/3443 [==============>...............] - ETA: 20s - loss: 0.0147"
+     ]
     }
    ],
    "source": [
