--- a/notebooks/rnnplus_for_har/RNNplus_v23.ipynb
+++ b/notebooks/rnnplus_for_har/RNNplus_v23.ipynb
@@ -521,7 +521,13 @@
       "3443/3443 [==============================] - 49s 14ms/step - loss: 0.0156 - val_loss: 0.0147\n",
       "Learning Rate:  tf.Tensor(0.002060804, shape=(), dtype=float32)\n",
       "Epoch 7/23\n",
-      "1731/3443 [==============>...............] - ETA: 20s - loss: 0.0147"
+      "3443/3443 [==============================] - 50s 15ms/step - loss: 0.0139 - val_loss: 0.0158\n",
+      "Learning Rate:  tf.Tensor(0.001937938, shape=(), dtype=float32)\n",
+      "Epoch 8/23\n",
+      "3443/3443 [==============================] - 50s 15ms/step - loss: 0.0126 - val_loss: 0.0125\n",
+      "Learning Rate:  tf.Tensor(0.001815072, shape=(), dtype=float32)\n",
+      "Epoch 9/23\n",
+      "3409/3443 [============================>.] - ETA: 0s - loss: 0.0116"
      ]
     }
    ],
