--- a/notebooks/rnnplus_for_har/RNNplus_v23.ipynb
+++ b/notebooks/rnnplus_for_har/RNNplus_v23.ipynb
@@ -527,7 +527,22 @@
       "3443/3443 [==============================] - 50s 15ms/step - loss: 0.0126 - val_loss: 0.0125\n",
       "Learning Rate:  tf.Tensor(0.001815072, shape=(), dtype=float32)\n",
       "Epoch 9/23\n",
-      "3409/3443 [============================>.] - ETA: 0s - loss: 0.0116"
+      "3443/3443 [==============================] - 51s 15ms/step - loss: 0.0116 - val_loss: 0.0154\n",
+      "Learning Rate:  tf.Tensor(0.001692206, shape=(), dtype=float32)\n",
+      "Epoch 10/23\n",
+      "3443/3443 [==============================] - 56s 16ms/step - loss: 0.0104 - val_loss: 0.0110\n",
+      "Learning Rate:  tf.Tensor(0.0015693401, shape=(), dtype=float32)\n",
+      "Epoch 11/23\n",
+      "3443/3443 [==============================] - 57s 17ms/step - loss: 0.0094 - val_loss: 0.0112\n",
+      "Learning Rate:  tf.Tensor(0.0014464741, shape=(), dtype=float32)\n",
+      "Epoch 12/23\n",
+      "3443/3443 [==============================] - 53s 15ms/step - loss: 0.0083 - val_loss: 0.0105\n",
+      "Learning Rate:  tf.Tensor(0.0013236081, shape=(), dtype=float32)\n",
+      "Epoch 13/23\n",
+      "3443/3443 [==============================] - 50s 14ms/step - loss: 0.0073 - val_loss: 0.0100\n",
+      "Learning Rate:  tf.Tensor(0.0012007422, shape=(), dtype=float32)\n",
+      "Epoch 14/23\n",
+      "1375/3443 [==========>...................] - ETA: 24s - loss: 0.0065"
      ]
     }
    ],
