--- a/notebooks/generate_data/processing_6_har_0.ipynb
+++ b/notebooks/generate_data/processing_6_har_0.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "49212a66-f1ba-4861-9424-6a975c5311c2",
    "metadata": {
     "tags": []
@@ -69,38 +69,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "90 40\n",
-      "(12536, 90, 3) (12536, 90, 6) (12536, 810)\n",
-      "(12538, 90, 3) (12538, 90, 6) (12538, 810)\n",
-      "(25013, 90, 3) (25013, 90, 6) (25013, 810)\n",
-      "60 30\n",
-      "(16696, 60, 3) (16696, 60, 6) (16696, 540)\n",
-      "(16698, 60, 3) (16698, 60, 6) (16698, 540)\n",
-      "(33326, 60, 3) (33326, 60, 6) (33326, 540)\n",
-      "50 20\n",
-      "(25008, 50, 3) (25008, 50, 6) (25008, 450)\n",
-      "(25013, 50, 3) (25013, 50, 6) (25013, 450)\n",
-      "(49947, 50, 3) (49947, 50, 6) (49947, 450)\n",
-      "40 20\n",
-      "(25008, 40, 3) (25008, 40, 6) (25008, 360)\n",
-      "(25013, 40, 3) (25013, 40, 6) (25013, 360)\n",
-      "(49947, 40, 3) (49947, 40, 6) (49947, 360)\n",
-      "90 90\n",
-      "(5609, 90, 3) (5609, 90, 6) (5609, 810)\n",
-      "(5611, 90, 3) (5611, 90, 6) (5611, 810)\n",
-      "(11152, 90, 3) (11152, 90, 6) (11152, 810)\n",
-      "60 60\n",
-      "(8385, 60, 3) (8385, 60, 6) (8385, 540)\n",
-      "(8387, 60, 3) (8387, 60, 6) (8387, 540)\n",
-      "(16698, 60, 3) (16698, 60, 6) (16698, 540)\n",
-      "50 50\n",
-      "(10042, 50, 3) (10042, 50, 6) (10042, 450)\n",
-      "(10044, 50, 3) (10044, 50, 6) (10044, 450)\n",
-      "(20024, 50, 3) (20024, 50, 6) (20024, 450)\n",
-      "40 40\n",
-      "(12536, 40, 3) (12536, 40, 6) (12536, 360)\n",
-      "(12538, 40, 3) (12538, 40, 6) (12538, 360)\n",
-      "(25013, 40, 3) (25013, 40, 6) (25013, 360)\n"
+      "../../../../Datasets/6_har/0_WISDM/WISDM_ar_v1.1/WISDM_ar_v1.1_source/WISDM_ar_v1.1_raw.txt\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>activity</th>\n",
+       "      <th>x_axis</th>\n",
+       "      <th>y_axis</th>\n",
+       "      <th>z_axis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>33</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-0.694638</td>\n",
+       "      <td>12.680544</td>\n",
+       "      <td>0.503953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>33</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.012288</td>\n",
+       "      <td>11.264028</td>\n",
+       "      <td>0.953424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>33</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.903325</td>\n",
+       "      <td>10.882658</td>\n",
+       "      <td>-0.081722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-0.612916</td>\n",
+       "      <td>18.496431</td>\n",
+       "      <td>3.023717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>33</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-1.184970</td>\n",
+       "      <td>12.108489</td>\n",
+       "      <td>7.205164</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user  activity    x_axis     y_axis    z_axis\n",
+       "0    33       2.0 -0.694638  12.680544  0.503953\n",
+       "1    33       2.0  5.012288  11.264028  0.953424\n",
+       "2    33       2.0  4.903325  10.882658 -0.081722\n",
+       "3    33       2.0 -0.612916  18.496431  3.023717\n",
+       "4    33       2.0 -1.184970  12.108489  7.205164"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\chaut\\Anaconda3\\envs\\master_thesis\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3465: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -160,6 +231,7 @@
     "os.mkdir(f\"{wisdmdataset_path}/WISDM_ar_v1.1_processed/WISDM_ar_v1.1_wt_overlap/\") if os.path.isdir(f\"{wisdmdataset_path}/WISDM_ar_v1.1_processed/WISDM_ar_v1.1_wt_overlap/\") == False else None\n",
     "os.mkdir(f\"{wisdmdataset_path}/WISDM_ar_v1.1_processed/WISDM_ar_v1.1_w_overlap/\") if os.path.isdir(f\"{wisdmdataset_path}/WISDM_ar_v1.1_processed/WISDM_ar_v1.1_w_overlap/\") == False  else None\n",
     "\n",
+    "print(f'{wisdmdataset_path}/WISDM_ar_v1.1_source/WISDM_ar_v1.1_raw.txt')\n",
     "wisdm_phone_data = pd.read_csv(f'{wisdmdataset_path}/WISDM_ar_v1.1_source/WISDM_ar_v1.1_raw.txt', header=None, names=['user', 'activity', 'timestamp', 'x_axis', 'y_axis', 'z_axis'])\n",
     "wisdm_phone_data.z_axis.replace(regex=True, inplace=True, to_replace=r';', value=r'')\n",
     "wisdm_phone_data['x_axis'] = wisdm_phone_data.x_axis.astype(np.float64)\n",
@@ -170,6 +242,9 @@
     "# {Walking - A - 1, Jogging - B - 2, Up/DownStairs - C - 5, Sitting - D - 3, Standing - E - 4, LyingDown - ?? - 6}\n",
     "mapping_dict = {'Walking': 1,'Jogging': 2, 'Sitting': 3, 'Standing': 4, 'Stairs': 5, 'Upstairs': 5, 'Downstairs ': 5, 'LyingDown': 6}\n",
     "wisdm_phone_data['activity'] = wisdm_phone_data.activity.map(mapping_dict)\n",
+    "\n",
+    "display(wisdm_phone_data.loc[:, ~wisdm_phone_data.columns.isin(['timestamp'])].head(5))\n",
+    "sys.exit()\n",
     "\n",
     "X_df, train_df, val_df = divideData_perUser(wisdm_phone_data, SPLIT)\n",
     "\n",
