--- a/notebooks/rnnplus_for_har/RNNplus_v21_v27.ipynb
+++ b/notebooks/rnnplus_for_har/RNNplus_v21_v27.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e251227c",
    "metadata": {
     "tags": []
    },
@@ -17,6 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "78781640",
    "metadata": {
     "tags": []
    },
@@ -371,6 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "2f4d0e53",
    "metadata": {
     "tags": []
    },
@@ -1553,6 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e6cf1586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1577,9 +1581,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py385_gpu",
+   "display_name": "master_thesis",
    "language": "python",
-   "name": "py385_gpu"
+   "name": "master_thesis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1591,7 +1595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
