--- a/notebooks/rnnplus_8datasets/LSTM_v0_8datasets.ipynb
+++ b/notebooks/rnnplus_8datasets/LSTM_v0_8datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fd884a55-2b6c-42e0-b1c6-363326979df3",
    "metadata": {},
    "outputs": [
@@ -12,20 +12,139 @@
      "text": [
       "tf:  2.7.0\n",
       "C:\\Users\\chaut\\OneDrive - Heriot-Watt University\\HIOF_Master\\Master_Thesis\\NewLSTM\\Codes\\tf_implementations\\notebooks\\rnnplus_8datasets\n",
-      "../../../../Datasets/8_publicDatasets/datasets\\WISDM\\train1.csv\n",
-      "{'batchSize': 4.0, 'numTrainingSteps': 320000.0, 'beta1': 0.944793, 'beta2': 0.999997, 'epsilon': 0.000227, 'decayDurationFactor': 0.974749, 'initialLearningRate': 0.001167, 'learningRateDecay': 0.000474, 'glorotScaleFactor': 0.1, 'orthogonalScaleFactor': 0.1, 'numNodes': 64.0}\n",
-      "{'batchSize': 4.0, 'numTrainingSteps': 320000.0, 'beta1': 0.944793, 'beta2': 0.999997, 'epsilon': 0.000227, 'decayDurationFactor': 0.974749, 'initialLearningRate': 0.001167, 'learningRateDecay': 0.000474, 'glorotScaleFactor': 0.1, 'orthogonalScaleFactor': 0.1, 'numNodes': 64}\n",
-      "Path: ../../../../Datasets/8_publicDatasets/datasets\\WISDM\\train1.csv - Shape: (13769, 360) - Timestep: 40 - NoIn: 3 - NoOut: 6\n",
-      "Epoch 1/23\n",
-      "3443/3443 [==============================] - 54s 15ms/step - loss: 0.0736 - mse: 0.0736 - categorical_accuracy: 0.7026 - val_loss: 0.0581 - val_mse: 0.0581 - val_categorical_accuracy: 0.7645\n",
-      "Epoch 2/23\n",
-      "3443/3443 [==============================] - 54s 16ms/step - loss: 0.0467 - mse: 0.0467 - categorical_accuracy: 0.8104 - val_loss: 0.0408 - val_mse: 0.0408 - val_categorical_accuracy: 0.8319\n",
-      "Epoch 3/23\n",
-      "3443/3443 [==============================] - 54s 16ms/step - loss: 0.0365 - mse: 0.0365 - categorical_accuracy: 0.8556 - val_loss: 0.0346 - val_mse: 0.0346 - val_categorical_accuracy: 0.8659\n",
-      "Epoch 4/23\n",
-      "3443/3443 [==============================] - 56s 16ms/step - loss: 0.0292 - mse: 0.0292 - categorical_accuracy: 0.8870 - val_loss: 0.0267 - val_mse: 0.0267 - val_categorical_accuracy: 0.8986\n",
-      "Epoch 5/23\n",
-      " 146/3443 [>.............................] - ETA: 37s - loss: 0.0252 - mse: 0.0252 - categorical_accuracy: 0.9092"
+      "../../../../Datasets/8_publicDatasets/datasets\\DoublePendulum\\train1.csv\n",
+      "{'batchSize': 4, 'numTrainingSteps': 320000, 'beta1': 0.981567, 'beta2': 0.999981, 'epsilon': 0.000722, 'decayDurationFactor': 0.912592, 'initialLearningRate': 0.004732, 'learningRateDecay': 1.225e-05, 'glorotScaleFactor': 0.1, 'orthogonalScaleFactor': 0.1, 'numNodes': 128}\n",
+      "Path: ../../../../Datasets/8_publicDatasets/datasets\\DoublePendulum\\train1.csv - Shape: (4999, 128) - Timestep: 16 - NoIn: 4 - NoOut: 4\n",
+      "Epoch 1/64\n",
+      "1250/1250 [==============================] - 18s 13ms/step - loss: 0.3426 - mse: 0.3426 - mae: 0.4216 - val_loss: 0.2499 - val_mse: 0.2499 - val_mae: 0.3444\n",
+      "Epoch 2/64\n",
+      "1250/1250 [==============================] - 18s 14ms/step - loss: 0.2170 - mse: 0.2170 - mae: 0.3197 - val_loss: 0.2044 - val_mse: 0.2044 - val_mae: 0.3057\n",
+      "Epoch 3/64\n",
+      "1250/1250 [==============================] - 21s 17ms/step - loss: 0.1749 - mse: 0.1749 - mae: 0.2742 - val_loss: 0.1719 - val_mse: 0.1719 - val_mae: 0.2712\n",
+      "Epoch 4/64\n",
+      "1250/1250 [==============================] - 19s 15ms/step - loss: 0.1499 - mse: 0.1499 - mae: 0.2479 - val_loss: 0.1508 - val_mse: 0.1508 - val_mae: 0.2427\n",
+      "Epoch 5/64\n",
+      "1250/1250 [==============================] - 17s 14ms/step - loss: 0.1303 - mse: 0.1303 - mae: 0.2260 - val_loss: 0.1419 - val_mse: 0.1419 - val_mae: 0.2280\n",
+      "Epoch 6/64\n",
+      "1250/1250 [==============================] - 17s 14ms/step - loss: 0.1126 - mse: 0.1126 - mae: 0.2095 - val_loss: 0.1261 - val_mse: 0.1261 - val_mae: 0.2106\n",
+      "Epoch 7/64\n",
+      "1250/1250 [==============================] - 17s 14ms/step - loss: 0.0977 - mse: 0.0977 - mae: 0.1923 - val_loss: 0.1242 - val_mse: 0.1242 - val_mae: 0.2061\n",
+      "Epoch 8/64\n",
+      "1250/1250 [==============================] - 17s 13ms/step - loss: 0.0814 - mse: 0.0814 - mae: 0.1765 - val_loss: 0.1197 - val_mse: 0.1197 - val_mae: 0.2031\n",
+      "Epoch 9/64\n",
+      "1250/1250 [==============================] - 17s 14ms/step - loss: 0.0696 - mse: 0.0696 - mae: 0.1648 - val_loss: 0.1131 - val_mse: 0.1131 - val_mae: 0.1903\n",
+      "Epoch 10/64\n",
+      "1250/1250 [==============================] - 17s 14ms/step - loss: 0.0582 - mse: 0.0582 - mae: 0.1514 - val_loss: 0.1048 - val_mse: 0.1048 - val_mae: 0.1834\n",
+      "Epoch 11/64\n",
+      "1250/1250 [==============================] - 17s 14ms/step - loss: 0.0471 - mse: 0.0471 - mae: 0.1369 - val_loss: 0.1008 - val_mse: 0.1008 - val_mae: 0.1788\n",
+      "Epoch 12/64\n",
+      "1250/1250 [==============================] - 18s 14ms/step - loss: 0.0409 - mse: 0.0409 - mae: 0.1277 - val_loss: 0.0998 - val_mse: 0.0998 - val_mae: 0.1705\n",
+      "Epoch 13/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0333 - mse: 0.0333 - mae: 0.1149 - val_loss: 0.1013 - val_mse: 0.1013 - val_mae: 0.1746\n",
+      "Epoch 14/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0273 - mse: 0.0273 - mae: 0.1052 - val_loss: 0.0968 - val_mse: 0.0968 - val_mae: 0.1681\n",
+      "Epoch 15/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0224 - mse: 0.0224 - mae: 0.0966 - val_loss: 0.0945 - val_mse: 0.0945 - val_mae: 0.1602\n",
+      "Epoch 16/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0195 - mse: 0.0195 - mae: 0.0906 - val_loss: 0.0939 - val_mse: 0.0939 - val_mae: 0.1597\n",
+      "Epoch 17/64\n",
+      "1250/1250 [==============================] - 17s 13ms/step - loss: 0.0164 - mse: 0.0164 - mae: 0.0839 - val_loss: 0.0932 - val_mse: 0.0932 - val_mae: 0.1578\n",
+      "Epoch 18/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0134 - mse: 0.0134 - mae: 0.0757 - val_loss: 0.0931 - val_mse: 0.0931 - val_mae: 0.1573\n",
+      "Epoch 19/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0127 - mse: 0.0127 - mae: 0.0740 - val_loss: 0.0909 - val_mse: 0.0909 - val_mae: 0.1527\n",
+      "Epoch 20/64\n",
+      "1250/1250 [==============================] - 15s 12ms/step - loss: 0.0105 - mse: 0.0105 - mae: 0.0679 - val_loss: 0.0914 - val_mse: 0.0914 - val_mae: 0.1496\n",
+      "Epoch 21/64\n",
+      "1250/1250 [==============================] - 15s 12ms/step - loss: 0.0088 - mse: 0.0088 - mae: 0.0628 - val_loss: 0.0904 - val_mse: 0.0904 - val_mae: 0.1471\n",
+      "Epoch 22/64\n",
+      "1250/1250 [==============================] - 17s 13ms/step - loss: 0.0074 - mse: 0.0074 - mae: 0.0583 - val_loss: 0.0899 - val_mse: 0.0899 - val_mae: 0.1469\n",
+      "Epoch 23/64\n",
+      "1250/1250 [==============================] - 18s 14ms/step - loss: 0.0064 - mse: 0.0064 - mae: 0.0540 - val_loss: 0.0895 - val_mse: 0.0895 - val_mae: 0.1464\n",
+      "Epoch 24/64\n",
+      "1250/1250 [==============================] - 15s 12ms/step - loss: 0.0056 - mse: 0.0056 - mae: 0.0509 - val_loss: 0.0898 - val_mse: 0.0898 - val_mae: 0.1449\n",
+      "Epoch 25/64\n",
+      "1250/1250 [==============================] - 15s 12ms/step - loss: 0.0051 - mse: 0.0051 - mae: 0.0489 - val_loss: 0.0896 - val_mse: 0.0896 - val_mae: 0.1458\n",
+      "Epoch 26/64\n",
+      "1250/1250 [==============================] - 18s 14ms/step - loss: 0.0045 - mse: 0.0045 - mae: 0.0461 - val_loss: 0.0904 - val_mse: 0.0904 - val_mae: 0.1453\n",
+      "Epoch 27/64\n",
+      "1250/1250 [==============================] - 17s 13ms/step - loss: 0.0040 - mse: 0.0040 - mae: 0.0436 - val_loss: 0.0892 - val_mse: 0.0892 - val_mae: 0.1432\n",
+      "Epoch 28/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0036 - mse: 0.0036 - mae: 0.0415 - val_loss: 0.0893 - val_mse: 0.0893 - val_mae: 0.1417\n",
+      "Epoch 29/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0033 - mse: 0.0033 - mae: 0.0398 - val_loss: 0.0894 - val_mse: 0.0894 - val_mae: 0.1421\n",
+      "Epoch 30/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0031 - mse: 0.0031 - mae: 0.0386 - val_loss: 0.0895 - val_mse: 0.0895 - val_mae: 0.1412\n",
+      "Epoch 31/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0029 - mse: 0.0029 - mae: 0.0373 - val_loss: 0.0895 - val_mse: 0.0895 - val_mae: 0.1414\n",
+      "Epoch 32/64\n",
+      "1250/1250 [==============================] - 15s 12ms/step - loss: 0.0026 - mse: 0.0026 - mae: 0.0355 - val_loss: 0.0899 - val_mse: 0.0899 - val_mae: 0.1411\n",
+      "Epoch 33/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0024 - mse: 0.0024 - mae: 0.0341 - val_loss: 0.0901 - val_mse: 0.0901 - val_mae: 0.1436\n",
+      "Epoch 34/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0022 - mse: 0.0022 - mae: 0.0326 - val_loss: 0.0899 - val_mse: 0.0899 - val_mae: 0.1420\n",
+      "Epoch 35/64\n",
+      "1250/1250 [==============================] - 17s 14ms/step - loss: 0.0021 - mse: 0.0021 - mae: 0.0318 - val_loss: 0.0898 - val_mse: 0.0898 - val_mae: 0.1415\n",
+      "Epoch 36/64\n",
+      "1250/1250 [==============================] - 18s 14ms/step - loss: 0.0019 - mse: 0.0019 - mae: 0.0307 - val_loss: 0.0903 - val_mse: 0.0903 - val_mae: 0.1414\n",
+      "Epoch 37/64\n",
+      "1250/1250 [==============================] - 17s 13ms/step - loss: 0.0018 - mse: 0.0018 - mae: 0.0296 - val_loss: 0.0900 - val_mse: 0.0900 - val_mae: 0.1402\n",
+      "Epoch 38/64\n",
+      "1250/1250 [==============================] - 17s 14ms/step - loss: 0.0017 - mse: 0.0017 - mae: 0.0286 - val_loss: 0.0903 - val_mse: 0.0903 - val_mae: 0.1389\n",
+      "Epoch 39/64\n",
+      "1250/1250 [==============================] - 19s 15ms/step - loss: 0.0015 - mse: 0.0015 - mae: 0.0276 - val_loss: 0.0904 - val_mse: 0.0904 - val_mae: 0.1399\n",
+      "Epoch 40/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0014 - mse: 0.0014 - mae: 0.0263 - val_loss: 0.0902 - val_mse: 0.0902 - val_mae: 0.1391\n",
+      "Epoch 41/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0013 - mse: 0.0013 - mae: 0.0258 - val_loss: 0.0907 - val_mse: 0.0907 - val_mae: 0.1411\n",
+      "Epoch 42/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0013 - mse: 0.0013 - mae: 0.0252 - val_loss: 0.0906 - val_mse: 0.0906 - val_mae: 0.1405\n",
+      "Epoch 43/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0012 - mse: 0.0012 - mae: 0.0246 - val_loss: 0.0908 - val_mse: 0.0908 - val_mae: 0.1413\n",
+      "Epoch 44/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 0.0012 - mse: 0.0012 - mae: 0.0239 - val_loss: 0.0909 - val_mse: 0.0909 - val_mae: 0.1396\n",
+      "Epoch 45/64\n",
+      "1250/1250 [==============================] - 16s 12ms/step - loss: 0.0011 - mse: 0.0011 - mae: 0.0233 - val_loss: 0.0908 - val_mse: 0.0908 - val_mae: 0.1389\n",
+      "Epoch 46/64\n",
+      "1250/1250 [==============================] - 16s 12ms/step - loss: 0.0011 - mse: 0.0011 - mae: 0.0227 - val_loss: 0.0910 - val_mse: 0.0910 - val_mae: 0.1399\n",
+      "Epoch 47/64\n",
+      "1250/1250 [==============================] - 16s 12ms/step - loss: 0.0010 - mse: 0.0010 - mae: 0.0222 - val_loss: 0.0909 - val_mse: 0.0909 - val_mae: 0.1395\n",
+      "Epoch 48/64\n",
+      "1250/1250 [==============================] - 16s 12ms/step - loss: 9.7936e-04 - mse: 9.7936e-04 - mae: 0.0218 - val_loss: 0.0911 - val_mse: 0.0911 - val_mae: 0.1405\n",
+      "Epoch 49/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 9.4449e-04 - mse: 9.4449e-04 - mae: 0.0214 - val_loss: 0.0910 - val_mse: 0.0910 - val_mae: 0.1393\n",
+      "Epoch 50/64\n",
+      "1250/1250 [==============================] - 16s 12ms/step - loss: 9.1770e-04 - mse: 9.1770e-04 - mae: 0.0211 - val_loss: 0.0911 - val_mse: 0.0911 - val_mae: 0.1409\n",
+      "Epoch 51/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 9.0078e-04 - mse: 9.0078e-04 - mae: 0.0209 - val_loss: 0.0910 - val_mse: 0.0910 - val_mae: 0.1396\n",
+      "Epoch 52/64\n",
+      "1250/1250 [==============================] - 16s 12ms/step - loss: 8.6882e-04 - mse: 8.6882e-04 - mae: 0.0205 - val_loss: 0.0911 - val_mse: 0.0911 - val_mae: 0.1394\n",
+      "Epoch 53/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 8.4751e-04 - mse: 8.4751e-04 - mae: 0.0202 - val_loss: 0.0911 - val_mse: 0.0911 - val_mae: 0.1393\n",
+      "Epoch 54/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 8.3193e-04 - mse: 8.3193e-04 - mae: 0.0200 - val_loss: 0.0911 - val_mse: 0.0911 - val_mae: 0.1385\n",
+      "Epoch 55/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 8.1635e-04 - mse: 8.1635e-04 - mae: 0.0198 - val_loss: 0.0911 - val_mse: 0.0911 - val_mae: 0.1399\n",
+      "Epoch 56/64\n",
+      "1250/1250 [==============================] - 17s 13ms/step - loss: 7.9912e-04 - mse: 7.9912e-04 - mae: 0.0196 - val_loss: 0.0912 - val_mse: 0.0912 - val_mae: 0.1390\n",
+      "Epoch 57/64\n",
+      "1250/1250 [==============================] - 16s 12ms/step - loss: 7.8754e-04 - mse: 7.8754e-04 - mae: 0.0194 - val_loss: 0.0912 - val_mse: 0.0912 - val_mae: 0.1394\n",
+      "Epoch 58/64\n",
+      "1250/1250 [==============================] - 17s 13ms/step - loss: 7.7510e-04 - mse: 7.7510e-04 - mae: 0.0192 - val_loss: 0.0912 - val_mse: 0.0912 - val_mae: 0.1394\n",
+      "Epoch 59/64\n",
+      "1250/1250 [==============================] - 17s 13ms/step - loss: 7.6587e-04 - mse: 7.6587e-04 - mae: 0.0191 - val_loss: 0.0912 - val_mse: 0.0912 - val_mae: 0.1394\n",
+      "Epoch 60/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 7.6438e-04 - mse: 7.6438e-04 - mae: 0.0191 - val_loss: 0.0912 - val_mse: 0.0912 - val_mae: 0.1394\n",
+      "Epoch 61/64\n",
+      "1250/1250 [==============================] - 15s 12ms/step - loss: 7.6438e-04 - mse: 7.6438e-04 - mae: 0.0191 - val_loss: 0.0912 - val_mse: 0.0912 - val_mae: 0.1394\n",
+      "Epoch 62/64\n",
+      "1250/1250 [==============================] - 16s 13ms/step - loss: 7.6437e-04 - mse: 7.6437e-04 - mae: 0.0191 - val_loss: 0.0912 - val_mse: 0.0912 - val_mae: 0.1394\n",
+      "Epoch 63/64\n",
+      "1250/1250 [==============================] - 18s 15ms/step - loss: 7.6437e-04 - mse: 7.6437e-04 - mae: 0.0191 - val_loss: 0.0912 - val_mse: 0.0912 - val_mae: 0.1394\n",
+      "Epoch 64/64\n",
+      "1250/1250 [==============================] - 19s 15ms/step - loss: 7.6437e-04 - mse: 7.6437e-04 - mae: 0.0191 - val_loss: 0.0912 - val_mse: 0.0912 - val_mae: 0.1394\n",
+      "1250/1250 [==============================] - 5s 4ms/step - loss: 0.0912 - mse: 0.0912 - mae: 0.1394\n",
+      "test1.csv val_performance = [0.09120928480007257, 0.09120928478095243, 0.13936089676107602]\n"
      ]
     }
    ],
@@ -297,7 +416,7 @@
     "    #     print(\"Don't have sufficient arguments.\")\n",
     "    #     sys.exit()\n",
     "    \n",
-    "    dataset = 'WISDM'\n",
+    "    dataset = 'DoublePendulum'\n",
     "    file_no = 1\n",
     "    ISMOORE_DATASETS = True\n",
     "    path = '../../../../Datasets/8_publicDatasets/datasets'\n",
@@ -331,7 +450,7 @@
     "    x_val     = (scaler.fit_transform(x_val.reshape(x_val.shape[0], -1))).reshape(x_val.shape[0], hyperparams['timestep'], noIn)\n",
     "    \n",
     "    if dataset == 'DoublePendulum':\n",
-    "        metrics_array = ['mse', 'mae']\n",
+    "        metrics_array = ['mae']\n",
     "    else:\n",
     "        metrics_array = [tf.keras.metrics.CategoricalAccuracy()]\n",
     "        \n",
