--- a/notebooks/rnnplus_for_har/RNNplus_v21_v00.ipynb
+++ b/notebooks/rnnplus_for_har/RNNplus_v21_v00.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9062188f",
    "metadata": {
     "tags": []
    },
@@ -17,6 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "c81a444a",
    "metadata": {
     "tags": []
    },
@@ -333,11 +335,8 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "be7be005",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -1598,6 +1597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f565eada",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1605,9 +1605,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py385_gpu",
+   "display_name": "master_thesis",
    "language": "python",
-   "name": "py385_gpu"
+   "name": "master_thesis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1619,7 +1619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
